# robotic-arm-ik

./: .gitignore  CMakeLists.txt  README.md
models/: ik_model.onnx.data
python_ml/: export_onnx.py  generate_dataset.py  ik_model.onnx  ik_model.pth  plot_compare.py  print_scalers.py  test_model.py  train_model.py
src/: main.cpp
src/collision/: obstacleAvoidance.cpp
src/control/: Controller.cpp
src/kinematics/: AnalyticalIK.cpp  ForwardKinematics.cpp  ML_IK.cpp
src/planning/: TrajectoryPlanner.cpp
tests/: collision_motion_test.cpp  full_motion_test.cpp  ik_test.cpp  ml_test.cpp  traj_test.cpp
